@@ -11,6 +11,7 @@ import com.databricks.sdk.service.sql.StatementStatus;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -39,7 +40,7 @@ public class MetadataResultSetBuilder {
 
   public static DatabricksResultSet getTablesResult(ResultSet resultSet, String[] tableTypes)
       throws SQLException {
-    List<String> allowedTableTypes = List.of(tableTypes);
+    List<String> allowedTableTypes = Arrays.asList(tableTypes);
     List<List<Object>> rows =
         getRows(resultSet, TABLE_COLUMNS).stream()
             .filter(row -> allowedTableTypes.contains(row.get(3))) // Filtering based on table type
