@@ -4,6 +4,7 @@ import static com.databricks.jdbc.integration.IntegrationTestUtil.*;
 
 import java.sql.*;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.*;
 
@@ -28,7 +29,7 @@ public class UCMetadataTests {
   @BeforeAll
   static void setUp() throws SQLException {
     // Change connection to actual test warehouse once it supports latest runtime
-    connection = getDogfoodJDBCConnection(List.of(List.of("useLegacyMetadata", "0")));
+    connection = getDogfoodJDBCConnection(Arrays.asList(Arrays.asList("useLegacyMetadata", "0")));
 
     executeSQL("CREATE CATALOG IF NOT EXISTS " + catA);
     executeSQL("USE CATALOG " + catA);
@@ -133,7 +134,8 @@ public class UCMetadataTests {
   @Test
   void testGetCatalogs() throws SQLException {
     ResultSet r = connection.getMetaData().getCatalogs();
-    verifyContainsCatalogs(r, List.of("main", "hive_metastore", "samples", catA.toLowerCase()));
+    verifyContainsCatalogs(
+        r, Arrays.asList("main", "hive_metastore", "samples", catA.toLowerCase()));
   }
 
   @Test
@@ -142,16 +144,17 @@ public class UCMetadataTests {
     ResultSet r = connection.getMetaData().getSchemas("hive_metastore", "%");
     verifyContainsSchemas(
         r,
-        List.of(
-            List.of("hive_metastore", "default"), List.of("hive_metastore", db2.toLowerCase())));
+        Arrays.asList(
+            Arrays.asList("hive_metastore", "default"),
+            Arrays.asList("hive_metastore", db2.toLowerCase())));
 
     r = connection.getMetaData().getSchemas(catA.toLowerCase(), "%");
     verifyContainsSchemas(
         r,
-        List.of(
-            List.of(catA.toLowerCase(), db1.toLowerCase()),
-            List.of(catA.toLowerCase(), db2.toLowerCase()),
-            List.of(catA.toLowerCase(), "default")));
+        Arrays.asList(
+            Arrays.asList(catA.toLowerCase(), db1.toLowerCase()),
+            Arrays.asList(catA.toLowerCase(), db2.toLowerCase()),
+            Arrays.asList(catA.toLowerCase(), "default")));
   }
 
   @Test
@@ -159,10 +162,10 @@ public class UCMetadataTests {
     ResultSet r = connection.getMetaData().getTables(catA.toLowerCase(), "%", "%", null);
     verifyContainsTables(
         r,
-        List.of(
-            List.of(catA.toLowerCase(), db1.toLowerCase(), "a_1", "TABLE"),
-            List.of(catA.toLowerCase(), db1.toLowerCase(), "a_2", "TABLE"),
-            List.of(catA.toLowerCase(), db2.toLowerCase(), "a_1", "TABLE")));
+        Arrays.asList(
+            Arrays.asList(catA.toLowerCase(), db1.toLowerCase(), "a_1", "TABLE"),
+            Arrays.asList(catA.toLowerCase(), db1.toLowerCase(), "a_2", "TABLE"),
+            Arrays.asList(catA.toLowerCase(), db2.toLowerCase(), "a_1", "TABLE")));
   }
 
   @Test
@@ -170,20 +173,21 @@ public class UCMetadataTests {
     ResultSet r = connection.getMetaData().getColumns(catA.toLowerCase(), "%", "%", "%");
     verifyContainsColumns(
         r,
-        List.of(
-            List.of(catA.toLowerCase(), db1.toLowerCase(), "a_1", "col_1", "INT"),
-            List.of(catA.toLowerCase(), db1.toLowerCase(), "a_1", "col_2", "STRING"),
-            List.of(catA.toLowerCase(), db1.toLowerCase(), "a_2", "col_1", "INT"),
-            List.of(catA.toLowerCase(), db1.toLowerCase(), "a_2", "col_2", "STRING"),
-            List.of(catA.toLowerCase(), db2.toLowerCase(), "a_1", "col_1", "INT"),
-            List.of(catA.toLowerCase(), db2.toLowerCase(), "a_1", "col_2", "STRING")));
+        Arrays.asList(
+            Arrays.asList(catA.toLowerCase(), db1.toLowerCase(), "a_1", "col_1", "INT"),
+            Arrays.asList(catA.toLowerCase(), db1.toLowerCase(), "a_1", "col_2", "STRING"),
+            Arrays.asList(catA.toLowerCase(), db1.toLowerCase(), "a_2", "col_1", "INT"),
+            Arrays.asList(catA.toLowerCase(), db1.toLowerCase(), "a_2", "col_2", "STRING"),
+            Arrays.asList(catA.toLowerCase(), db2.toLowerCase(), "a_1", "col_1", "INT"),
+            Arrays.asList(catA.toLowerCase(), db2.toLowerCase(), "a_1", "col_2", "STRING")));
   }
 
   @Test
   void testGetCurrentCatalogAndSchema() throws SQLException {
     connection =
         getDogfoodJDBCConnection(
-            List.of(List.of("useLegacyMetadata", "0"), List.of("connCatalog", catA)));
+            Arrays.asList(
+                Arrays.asList("useLegacyMetadata", "0"), Arrays.asList("connCatalog", catA)));
     ResultSet r =
         connection.createStatement().executeQuery("SELECT current_catalog(), current_database()");
     r.next();
@@ -192,7 +196,8 @@ public class UCMetadataTests {
 
     connection =
         getDogfoodJDBCConnection(
-            List.of(List.of("useLegacyMetadata", "0"), List.of("connCatalog", "samples")));
+            Arrays.asList(
+                Arrays.asList("useLegacyMetadata", "0"), Arrays.asList("connCatalog", "samples")));
     r = connection.createStatement().executeQuery("SELECT current_catalog(), current_database()");
     r.next();
     assert (r.getString(1).equals("samples"));
@@ -200,7 +205,9 @@ public class UCMetadataTests {
 
     connection =
         getDogfoodJDBCConnection(
-            List.of(List.of("useLegacyMetadata", "0"), List.of("connSchema", db2.toLowerCase())));
+            Arrays.asList(
+                Arrays.asList("useLegacyMetadata", "0"),
+                Arrays.asList("connSchema", db2.toLowerCase())));
     r = connection.createStatement().executeQuery("SELECT current_catalog(), current_database()");
     r.next();
     assert (r.getString(1).equals(sparkCatalog));
@@ -208,10 +215,10 @@ public class UCMetadataTests {
 
     connection =
         getDogfoodJDBCConnection(
-            List.of(
-                List.of("useLegacyMetadata", "0"),
-                List.of("connCatalog", "fake_catalog"),
-                List.of("connSchema", "fake_schema")));
+            Arrays.asList(
+                Arrays.asList("useLegacyMetadata", "0"),
+                Arrays.asList("connCatalog", "fake_catalog"),
+                Arrays.asList("connSchema", "fake_schema")));
     r = connection.createStatement().executeQuery("SELECT current_catalog(), current_database()");
     r.next();
     assert (r.getString(1).equals("fake_catalog"));
@@ -223,7 +230,7 @@ public class UCMetadataTests {
     try {
       while (r.next()) {
         allColumns.add(
-            List.of(
+            Arrays.asList(
                 r.getString("TABLE_CAT"),
                 r.getString("TABLE_SCHEM"),
                 r.getString("TABLE_NAME"),
@@ -241,7 +248,7 @@ public class UCMetadataTests {
     try {
       while (r.next()) {
         allTables.add(
-            List.of(
+            Arrays.asList(
                 r.getString("TABLE_CAT"),
                 r.getString("TABLE_SCHEM"),
                 r.getString("TABLE_NAME"),
@@ -258,7 +265,7 @@ public class UCMetadataTests {
     ArrayList<List<String>> allSchemas = new ArrayList<>();
     try {
       while (r.next()) {
-        allSchemas.add(List.of(r.getString("TABLE_CAT"), r.getString("TABLE_SCHEM")));
+        allSchemas.add(Arrays.asList(r.getString("TABLE_CAT"), r.getString("TABLE_SCHEM")));
       }
     } catch (SQLException e) {
       e.printStackTrace();
